--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "babuBhaiya.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node babuBhaiya.js"
+    "start": "nodemon babuBhaiya.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Soaib024/santa#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "nodemon": "^3.0.2"
   }
 }
